用户模块添加转换剩余次数

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -647,6 +647,7 @@ InspectionTableReview=Inspection Table Review
 ##\u5176\u4ED6
 Welcome=Welcome,
 UserName=UserName
+UserIntegral=UserIntegral
 No=No.
 Enmail=E-mail
 name=name
