1.cxf报错问题 2.区域管理改为投料点管理

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -102,12 +102,13 @@ UserMaintenance=User Maintenance
 Allowusertologinornot=Allow user to login or not
 Selectdepartment=Select department
 ####\u533A\u57DF\u7BA1\u7406
-AreaManagement=Area Management
+AreaManagement=Feeding point management
 AreaName=Name
 AreaCode=Code
 AreaType=Type
-Addarea=Add Area
-Editarea=Edit Area
+AreaLocation=Address
+Addarea=Add Feeding Point
+Editarea=Edit Feeding Point
 Superiorarea=Superior Area
 ChooseSuperiorarea=Select Superior Area
 ###\u7CFB\u7EDF\u8BBE\u7F6E
