--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -102,12 +102,13 @@ UserMaintenance=\u7528\u6237\u7EF4\u62A4
 Allowusertologinornot=\u8BE5\u7528\u6237\u662F\u5426\u5141\u8BB8\u767B\u5F55\u7CFB\u7EDF
 Selectdepartment=\u9009\u62E9\u90E8\u95E8
 ####\u533A\u57DF\u7BA1\u7406
-AreaManagement=\u533A\u57DF\u7BA1\u7406
-AreaName=\u533A\u57DF\u540D\u79F0
-AreaCode=\u533A\u57DF\u7F16\u7801
+AreaManagement=\u6295\u6599\u70b9\u7ba1\u7406
+AreaName=\u540d\u79f0
+AreaCode=\u7f16\u7801
+AreaLocation=\u6295\u6599\u70b9\u5730\u5740
 AreaType=\u533A\u57DF\u7C7B\u578B
-Addarea=\u65B0\u589E\u533A\u57DF
-Editarea=\u7F16\u8F91\u533A\u57DF
+Addarea=\u65b0\u589e\u6295\u6599\u70b9
+Editarea=\u7F16\u8F91\u6295\u6599\u70b9
 Superiorarea=\u4E0A\u7EA7\u533A\u57DF
 ChooseSuperiorarea=\u9009\u62E9\u4E0A\u7EA7\u533A\u57DF
 ###\u7CFB\u7EDF\u8BBE\u7F6E
