节假日功能代码以及页面提交

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1069,3 +1069,7 @@ MailTest=Mail Test
 Info.ofWorkOrderbyPlan=Info. of Work Order by Plan
 DownloadPDF=Download PDF
 W/OInfo.=W/OInfo.
+remarks=remarks
+holidayType=holidayType
+holidayDate=holidayDate
+HolidayDocumentUpload=HolidayDocumentUpload
