--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1073,3 +1073,4 @@ remarks=remarks
 holidayType=holidayType
 holidayDate=holidayDate
 HolidayDocumentUpload=HolidayDocumentUpload
+holidayManage=holidayManage
