添加事件控件

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1074,3 +1074,4 @@ holidayType=holidayType
 holidayDate=holidayDate
 HolidayDocumentUpload=HolidayDocumentUpload
 holidayManage=holidayManage
+HolidayInfo.=HolidayInfo.
