--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1074,4 +1074,5 @@ holidayType=\u5047\u671f\u7c7b\u578b
 holidayDate=\u5047\u671f\u65e5\u671f
 HolidayDocumentUpload=\u8282\u5047\u65e5\u6587\u4ef6\u4e0a\u4f20
 holidayManage=\u5047\u671f\u7ba1\u7406
+HolidayInfo.=\u8282\u5047\u65e5\u4fe1\u606f
 
