节假日模块增加时间范围查询;页面样式修改

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -726,8 +726,9 @@ Oct=Oct
 Nov=Nov
 Dec=Dec
 ViewProcess=View Process
+HolidayList=Holiday List
 AnnualPlanList=Annual Plan List
-AnnualPlanInfo.=Annual Plan Info.
+AnnualPlanInfo=Annual Plan Info
 Train-setNo./Section=Train-set No./Section
 AnnualPlanDetails=Annual Plan Details
 AnnualPlanDocumentUpload=Annual Plan Document Upload
@@ -1074,4 +1075,5 @@ holidayType=holidayType
 holidayDate=holidayDate
 HolidayDocumentUpload=HolidayDocumentUpload
 holidayManage=holidayManage
-HolidayInfo.=HolidayInfo.
+HolidayInfo=HolidayInfo
+DateRange=Date Range
