--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -726,6 +726,7 @@ Oct=\u5341\u6708
 Nov=\u5341\u4E00\u6708
 Dec=\u5341\u4E8C\u6708
 ViewProcess=\u6D41\u7A0B\u67E5\u770B
+HolidayList=\u8282\u5047\u65e5\u5217\u8868
 AnnualPlanList=\u5E74\u5EA6\u8BA1\u5212\u5217\u8868
 AnnualPlanInfo.=\u5E74\u5EA6\u8BA1\u5212\u4FE1\u606F
 Train-setNo./Section=\u8F66\u5217\u53F7/\u533A\u6BB5
@@ -1074,5 +1075,6 @@ holidayType=\u5047\u671f\u7c7b\u578b
 holidayDate=\u5047\u671f\u65e5\u671f
 HolidayDocumentUpload=\u8282\u5047\u65e5\u6587\u4ef6\u4e0a\u4f20
 holidayManage=\u5047\u671f\u7ba1\u7406
-HolidayInfo.=\u8282\u5047\u65e5\u4fe1\u606f
+HolidayInfo=\u8282\u5047\u65e5\u4fe1\u606f
+DateRange=\u65e5\u671f\u8303\u56f4
 
