1.假期管理bug修改 2.用户批量充值

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1077,3 +1077,5 @@ HolidayDocumentUpload=HolidayDocumentUpload
 holidayManage=holidayManage
 HolidayInfo=HolidayInfo
 DateRange=Date Range
+RechargeTemplateDownload=Recharge Template Download
+BatchRechargeImport=Batch Recharge Import
