--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1077,4 +1077,6 @@ HolidayDocumentUpload=\u8282\u5047\u65e5\u6587\u4ef6\u4e0a\u4f20
 holidayManage=\u5047\u671f\u7ba1\u7406
 HolidayInfo=\u8282\u5047\u65e5\u4fe1\u606f
 DateRange=\u65e5\u671f\u8303\u56f4
+RechargeTemplateDownload=\u5145\u503c\u6a21\u677f\u4e0b\u8f7d
+BatchRechargeImport=\u6279\u91cf\u5145\u503c\u5bfc\u5165
 
