菜单功能代码以及页面提交(页面未完成)

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1079,3 +1079,14 @@ HolidayInfo=HolidayInfo
 DateRange=Date Range
 RechargeTemplateDownload=Recharge Template Download
 BatchRechargeImport=Batch Recharge Import
+menuName=menuName
+menuDescription=menuDescription
+menuImgUrl=menuImgUrl
+menuLimited=menuLimited
+menuCount=menuCount
+menuType=menuType
+menuStatus=menuStatus
+menuUp=menuUp
+examineInfo=examineInfo
+PzMenuList=PzMenuList
+PzMenuInfo.=PzMenuInfo.
