--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1079,4 +1079,14 @@ HolidayInfo=\u8282\u5047\u65e5\u4fe1\u606f
 DateRange=\u65e5\u671f\u8303\u56f4
 RechargeTemplateDownload=\u5145\u503c\u6a21\u677f\u4e0b\u8f7d
 BatchRechargeImport=\u6279\u91cf\u5145\u503c\u5bfc\u5165
-
+menuName=\u83dc\u5355\u540d\u79f0
+menuDescription=\u83dc\u5355\u63cf\u8ff0
+menuImgUrl=\u83dc\u5355\u56fe\u7247
+menuLimited=\u5957\u9910\u662f\u5426\u9650\u91cf
+menuCount=\u5957\u9910\u4f59\u91cf
+menuType=\u5957\u9910\u89c4\u683c
+menuStatus=\u5957\u9910\u72b6\u6001
+menuUp=\u662f\u5426\u4e0a\u67b6
+examineInfo=\u5ba1\u6838\u539f\u56e0
+PzMenuList=\u83dc\u5355\u5217\u8868
+PzMenuInfo.=\u83dc\u5355\u4fe1\u606f
