--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1090,3 +1090,4 @@ menuUp=\u662f\u5426\u4e0a\u67b6
 examineInfo=\u5ba1\u6838\u539f\u56e0
 PzMenuList=\u83dc\u5355\u5217\u8868
 PzMenuInfo.=\u83dc\u5355\u4fe1\u606f
+pzMenuManage=\u83dc\u5355\u7ba1\u7406
