提交查询个人套餐积分功能代码以及前端页面

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1091,3 +1091,8 @@ examineInfo=examineInfo
 PzMenuList=PzMenuList
 PzMenuInfo.=PzMenuInfo.
 pzMenuManage=pzMenuManage
+pzMenuExamineManage=pzMenuExamineManage
+see=see
+noPass=noPass
+PzMenuExamineInfo.=PzMenuExamineInfo.
+pzMenuCanteenIntegral=pzMenuCanteenIntegral
