--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1091,3 +1091,8 @@ examineInfo=\u5ba1\u6838\u539f\u56e0
 PzMenuList=\u83dc\u5355\u5217\u8868
 PzMenuInfo.=\u83dc\u5355\u4fe1\u606f
 pzMenuManage=\u83dc\u5355\u7ba1\u7406
+pzMenuExamineManage=\u5957\u9910\u5ba1\u6838\u7ba1\u7406
+see=\u67e5\u770b
+noPass=\u4e0d\u901a\u8fc7
+PzMenuExamineInfo.=\u83dc\u5355\u5ba1\u6838\u4fe1\u606f
+pzMenuCanteenIntegral=\u9910\u5385\u6240\u5c5e\u79ef\u5206
