1.菜单审核页面修改 2.菜单审核用户权限判断修改

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1097,3 +1097,5 @@ noPass=noPass
 PzMenuExamineInfo.=PzMenuExamineInfo.
 pzMenuCanteenIntegral=pzMenuCanteenIntegral
 examine=examine
+upShelf=Put on the shelves
+downShelf=Off the shelf
