--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1097,3 +1097,5 @@ noPass=\u4e0d\u901a\u8fc7
 PzMenuExamineInfo.=\u83dc\u5355\u5ba1\u6838\u4fe1\u606f
 pzMenuCanteenIntegral=\u9910\u5385\u6240\u5c5e\u79ef\u5206
 examine=\u5ba1\u6838
+upShelf=\u4e0a\u67b6
+downShelf=\u4e0b\u67b6
