1.菜单审核列表增加运营商名称

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1099,3 +1099,4 @@ pzMenuCanteenIntegral=pzMenuCanteenIntegral
 examine=examine
 upShelf=Put on the shelves
 downShelf=Off the shelf
+gcsName=Name of caterer
