--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1099,3 +1099,4 @@ pzMenuCanteenIntegral=\u9910\u5385\u6240\u5c5e\u79ef\u5206
 examine=\u5ba1\u6838
 upShelf=\u4e0a\u67b6
 downShelf=\u4e0b\u67b6
+gcsName=\u4f9b\u9910\u5546\u540d\u79f0
