添加箱子编码功能接口以及在订单接口中添加字段

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1100,3 +1100,10 @@ examine=examine
 upShelf=Put on the shelves
 downShelf=Off the shelf
 gcsName=Name of caterer
+boxCode=boxCode
+boxCnName=boxCnName
+pzBoxCodeList=pzBoxCodeList
+PzBoxCodeInfo.=PzBoxCodeInfo.
+pzBoxCodeManage=pzBoxCodeManage
+restaurantId=restaurantId
+serviceUnitId=serviceUnitId
