--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1100,3 +1100,10 @@ examine=\u5ba1\u6838
 upShelf=\u4e0a\u67b6
 downShelf=\u4e0b\u67b6
 gcsName=\u4f9b\u9910\u5546\u540d\u79f0
+boxCode=\u7bb1\u5b50\u7f16\u7801
+boxCnName=\u7bb1\u5b50\u4e2d\u6587\u540d\u79f0
+pzBoxCodeList=\u7bb1\u5b50\u7f16\u7801\u5217\u8868
+PzBoxCodeInfo.=\u7bb1\u5b50\u7f16\u7801\u4fe1\u606f
+pzBoxCodeManage=\u7bb1\u5b50\u7f16\u7801\u7ba1\u7406
+restaurantId=
+serviceUnitId=
