修改en/zh.properties文件

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1107,3 +1107,7 @@ PzBoxCodeInfo.=PzBoxCodeInfo.
 pzBoxCodeManage=pzBoxCodeManage
 restaurantId=restaurantId
 serviceUnitId=serviceUnitId
+userId=userId
+canteenIntegral=canteenIntegral
+PzUserScoreInfo.=PzUserScoreInfo.
+pzUserScoreList=pzUserScoreList
