1.用户积分功能代码 2.用户积分记录代码 3.Global中添加积分类型 4.修改bug

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1111,3 +1111,9 @@ userId=userId
 canteenIntegral=canteenIntegral
 PzUserScoreInfo.=PzUserScoreInfo.
 pzUserScoreList=pzUserScoreList
+pzScoreLogManage=pzScoreLogManage
+scoreType=scoreType
+scoreChange=scoreChange
+scoreDescription=scoreDescription
+pzScoreLogList=pzScoreLogList
+PzScoreLogInfo.=PzScoreLogInfo.
