--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1112,3 +1112,9 @@ canteenIntegral=\u4e2a\u4eba\u9910\u5385\u6240\u5c5e\u79ef\u5206
 pzUserScoreManage=\u4e2a\u4eba\u9910\u5385\u79ef\u5206\u7ba1\u7406
 PzUserScoreInfo.=\u4e2a\u4eba\u9910\u5385\u79ef\u5206\u4fe1\u606f
 pzUserScoreList=\u4e2a\u4eba\u9910\u5385\u79ef\u5206\u5217\u8868
+pzScoreLogManage=\u79ef\u5206\u5386\u53f2\u8bb0\u5f55\u7ba1\u7406
+scoreType=\u79ef\u5206\u7c7b\u578b
+scoreChange=\u53d8\u52a8\u79ef\u5206
+scoreDescription=\u79ef\u5206\u53d8\u52a8\u63cf\u8ff0
+pzScoreLogList=\u79ef\u5206\u5386\u53f2\u5217\u8868
+PzScoreLogInfo.=\u79ef\u5206\u5386\u53f2\u4fe1\u606f
