添加点餐功能

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1117,3 +1117,4 @@ scoreChange=scoreChange
 scoreDescription=scoreDescription
 pzScoreLogList=pzScoreLogList
 PzScoreLogInfo.=PzScoreLogInfo.
+scoreClassify=scoreClassify
