--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1118,3 +1118,4 @@ scoreChange=\u53d8\u52a8\u79ef\u5206
 scoreDescription=\u79ef\u5206\u53d8\u52a8\u63cf\u8ff0
 pzScoreLogList=\u79ef\u5206\u5386\u53f2\u5217\u8868
 PzScoreLogInfo.=\u79ef\u5206\u5386\u53f2\u4fe1\u606f
+scoreClassify=\u79ef\u5206\u5206\u7c7b\u000d\u000a
