修改点餐功能

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1107,7 +1107,8 @@ PzBoxCodeInfo.=PzBoxCodeInfo.
 pzBoxCodeManage=pzBoxCodeManage
 restaurantId=restaurantId
 serviceUnitId=serviceUnitId
-userId=userId
+#userId=userId
+userName=userName
 canteenIntegral=canteenIntegral
 PzUserScoreInfo.=PzUserScoreInfo.
 pzUserScoreList=pzUserScoreList
