--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1107,7 +1107,8 @@ PzBoxCodeInfo.=\u7bb1\u5b50\u7f16\u7801\u4fe1\u606f
 pzBoxCodeManage=\u7bb1\u5b50\u7f16\u7801\u7ba1\u7406
 restaurantId=\u9910\u5385\u540d\u79f0
 serviceUnitId=\u670d\u52a1\u5355\u5143\u540d\u79f0
-userId=\u7528\u6237\u540d\u79f0
+#userId=\u7528\u6237\u540d\u79f0
+userName=\u7528\u6237\u540d\u79f0
 canteenIntegral=\u4e2a\u4eba\u9910\u5385\u6240\u5c5e\u79ef\u5206
 pzUserScoreManage=\u4e2a\u4eba\u9910\u5385\u79ef\u5206\u7ba1\u7406
 PzUserScoreInfo.=\u4e2a\u4eba\u9910\u5385\u79ef\u5206\u4fe1\u606f
