1.箱子编码便利页面样式修改 2.箱子编码批量打印功能 3.箱子编码字段调整

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1119,3 +1119,4 @@ scoreDescription=scoreDescription
 pzScoreLogList=pzScoreLogList
 PzScoreLogInfo.=PzScoreLogInfo.
 scoreClassify=scoreClassify
+BarcodePrinting=Barcode printing
