添加配送功能以及代码优化

--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -648,7 +648,7 @@ InspectionTableReview=\u68C0\u67E5\u9644\u8868\u5BA1\u6838
 ##\u5176\u4ED6
 Welcome=\u6B22\u8FCE\u60A8,
 UserName=\u7528\u6237\u540D
-UserIntegral=\u5269\u4f59\u5c31\u9910\u6b21\u6570
+UserIntegral=\u9910\u5238
 No=\u5DE5\u53F7
 Enmail=\u90AE\u7BB1
 name=\u59D3\u540D
