1.修改新增菜单模块 2.修改菜单审核模块

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1120,3 +1120,4 @@ pzScoreLogList=pzScoreLogList
 PzScoreLogInfo.=PzScoreLogInfo.
 scoreClassify=scoreClassify
 BarcodePrinting=Barcode printing
+menuDetail=Menu Detail
