1.供餐商统计模块修改

--- a/src/main/webapp/static/i18n/properties/strings_en.properties
+++ b/src/main/webapp/static/i18n/properties/strings_en.properties
@@ -1121,3 +1121,6 @@ PzScoreLogInfo.=PzScoreLogInfo.
 scoreClassify=scoreClassify
 BarcodePrinting=Barcode printing
 menuDetail=Menu Detail
+dailyOrderStatistics=Daily order statistics
+orderStatisticsOfNextWeek=Order statistics of next week
+StatisticsList=Statistics list
