--- a/src/main/webapp/static/i18n/properties/strings_zh.properties
+++ b/src/main/webapp/static/i18n/properties/strings_zh.properties
@@ -1122,3 +1122,6 @@ PzScoreLogInfo.=\u79ef\u5206\u5386\u53f2\u4fe1\u606f
 scoreClassify=\u79ef\u5206\u5206\u7c7b\u000d\u000a
 BarcodePrinting=\u6761\u5f62\u7801\u6253\u5370
 menuDetail=\u5957\u9910\u660e\u7ec6
+dailyOrderStatistics=\u6bcf\u65e5\u8ba2\u5355\u7edf\u8ba1
+orderStatisticsOfNextWeek=\u4e0b\u5468\u8ba2\u5355\u7edf\u8ba1
+StatisticsList=\u7edf\u8ba1\u5217\u8868
